# Schkopau-4-MTP-Model

./: .gitignore  Schkopau MTP – Model Documentation.html  Schkopau_Model_Explained.html  Schkopau_Model_Explained.md  _coal_curve.py  _coal_slope_demo.py  _diag.py  _duo_analysis.py  _interior_analysis.py  _kyos_compare.py  _lp_merit.py  _lp_simulate.py  _parametric_shadow.py  _pdf_text.txt  _ramp_analysis.py  _shadow_curve.py  main.py  md_to_pdf.py  pyproject.toml  requirements.txt
schkopau_mtp/: __init__.py  __main__.py  config.py  data_loader.py  model_builder.py  model_builder_linearized_duo.py  reporting.py  results.py  solver.py
schkopau_mtp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
